tests/rosetta/transpiler/Clojure/ackermann-function-2.error
run error: exit status 1
Execution error (ExceptionInfo) at main/ackermann2 (ackermann-function-2.clj:13).
return

Full report at:
/tmp/clojure-446790831884396088.edn
